# haskell-skeleton

./: FinEquations.hs  README.md  Skeleton.hs  run.sh  runtests.sh  simple.cabal
bench/: Bench.hs
src/: Lib.hs
test/: Check.hs  Profile.hs  Spec.hs  Unit.hs
