name:                simple
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable simple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple
                     , HUnit
                     , QuickCheck
                     , hpc                 >=0.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N  
  default-language:    Haskell2010


benchmark bench
  type: exitcode-stdio-1.0
  hs-source-dirs:     src,bench
  main-is: Bench.hs
--  other-modules:
 --     SimpleBench
  ghc-options: -Wall -O2
-- -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -fno-warn-missing-signatures -fno-warn-type-defaults -fno-warn-orphans
  default-language: Haskell2010
  build-depends:     base
                   , criterion 


source-repository head
  type:     git
  location: https://github.com/githubuser/simple
